# smudgy

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  installer.iss
.cargo/: config.toml
.cursor/rules/: clippy-pedantic.mdc  iced-features.mdc  important-information-about-iced.mdc
assets/: installer.iss  motd.txt  ui-mock.html
benches/: dice_rolls.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs  models.rs  session.rs  terminal_buffer.rs
core/src/models/: aliases.rs  hotkeys.rs  modules.rs  packages.rs  profile.rs  server.rs  settings.rs  triggers.rs
core/src/session/: connection.rs  incoming_line_history.rs  registry.rs  runtime.rs  styled_line.rs
core/src/session/connection/: vt_processor.rs
core/src/session/connection/vt_processor/: sgr.rs
core/src/session/runtime/: line_operation.rs  script_action.rs  script_engine.rs  trigger.rs
core/src/session/runtime/js/: smudgy.d.ts  smudgy.d.ts.map  smudgy.js  tsconfig.json
core/src/session/runtime/script_engine/: mapper.rs  ops.rs
core/src/session/runtime/script_engine/mapper/: mapper.d.ts  mapper.d.ts.map  mapper.ts  tsconfig.json
core/src/terminal_buffer/: selection.rs
data/accounts/: bort.toml  foo.toml  jerry.toml
docs/: io_sketch.md
iced_jsx/: Cargo.toml
iced_jsx/src/: extension.rs  lib.rs  widget.rs
iced_jsx/src/extension/ts/: iced_jsx.ts
map/: Cargo.toml  README.md
map/examples/: shared_cache_demo.rs
map/src/: error.rs  lib.rs  mapper.rs
map/src/backends/: cloud.rs  mod.rs
map/src/mapper/: area_cache.rs  atlas_cache.rs  room_cache.rs  room_connection.rs
src/: account.rs  config.rs  creature.rs  dice.rs  game.rs  hotkey.rs  lib.rs  main.rs  models.rs  player.rs  script_runtime.rs  session.rs  trigger.rs  ui.rs  zone.rs
src/models/: character.rs  profile.rs
src/session/: account_menu.rs  command_history.rs  connection.rs  create_character.rs  handler.rs  incoming_line_history.rs  lines_in_codec.rs  motd.rs  signup.rs  styled_line.rs  terminal_view.rs  unauthenticated.rs
src/session/connection/: vt_processor.rs
src/session/connection/vt_processor/: sgr.rs
src/ui/: connect_window_builder.rs
theme/: Cargo.toml
theme/src/: lib.rs
theme/src/builtins/: button.rs  container.rs  progress_bar.rs  radio.rs  rule.rs  svg.rs  text.rs  text_input.rs
ui/: Cargo.toml  build.rs  globals.slint  main_window.slint  terminal_view.slint  themed.slint  toolbar.slint
ui/components/: confirmation_overlay.slint  message_overlay.slint  scrollbar.slint
ui/connect_window/: connect_window.slint  create_profile_page.slint  page.slint  profile_page.slint  side_bar.slint  types.slint
ui/scratch/: empty_sample_page.slint
ui/src/: assets.rs  components.rs  main.rs  modal.rs  session_input.rs  session_pane.rs  theme.rs  toolbar.rs  widgets.rs
ui/src/components/: map_view.rs  session_input.rs  session_pane.rs
ui/src/helpers/: hotkeys.rs
ui/src/modal/: connect.rs
ui/src/theme/: secondary.rs  smudgy.rs
ui/src/theme/builtins/: button.rs  container.rs  radio.rs  rule.rs  text.rs  text_input.rs
ui/src/widgets/: hotkey_input.rs  hotkey_matching_input.rs  split_terminal_pane.rs
ui/src/widgets/split_terminal_pane/: scroll_bar.rs  terminal_pane.rs
ui/src/widgets/split_terminal_pane/terminal_pane/: spans.rs
ui/src/windows/: map_editor_window.rs  script_editor_window.rs  settings_window.rs  smudgy_window.rs
ui_src/connect_window/: Cargo.toml  build.rs
