[workspace]
members = ["ui", "core", "map"]
resolver = "2"

# Define shared dependencies for the workspace
[workspace.dependencies]
arc-swap = { version = "1.7.1", features = ["weak"] }
anyhow = "1.0.98"
iced = { version = "0.14.0-dev", features = [
    "tokio",
    "svg",
    "web-colors",
    "highlighter",
    "advanced",
    "canvas",
    "debug"
] }
iced_anim = { git = "https://github.com/wbk/iced_anim", rev = "2a0414e" }
derive_more = { version = "2.0.1", features = [
    "display",
    "from",
    "into",
    "add",
] }
dirs = "6.0.0"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
cfg-if = "1.0.0"
regex = "1"
hyperscan = "0.3.2"
smudgy_core = { path = "./core" }
smudgy_theme = { path = "./theme" }
smudgy_map = { path = "./map", features = ["cloud"] }
iced_jsx = { path = "./iced_jsx" }
tokio = { version = "1.44.2", features = ["full"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
log = { version = "0.4.27", features = ["max_level_info"] }
vtparse = "0.7.0"
deno_core = { version = "^0.347.0", features = [
    "unsafe_use_unprotected_platform",
] }
deno_error = "=0.5.6"
rustyscript = { git = "https://github.com/wbk/rustyscript", branch = "master", features = [
    "broadcast_channel",
    "cache",
    "console",
    "crypto",
    "ffi",
    "fs",
    "http",
    "kv",
    "url",
    "io",
    "web",
    "websocket",
    "webstorage",
    "fs_import",
    "url_import",
    "node_experimental",
] }
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
build-time = "0.1.3"

# Define workspace-wide lints
[workspace.lints.clippy]
pedantic = "warn"

[profile.profiling]
inherits = "release"
debug = true

[profile.release-full]
inherits = "release"
lto = true

[patch.crates-io]
iced = { git = "https://github.com/wbk/iced", rev = "983aafb24b7b5bfa95eab1efc38e9eb928137b27" }