[package]
name = "smudgy_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Inherit versions from workspace where possible
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
cfg-if = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
regex = { workspace = true, optional = true }
hyperscan = { workspace = true, optional = true }
log = { workspace = true }
vtparse = "0.7.0"
deno_core = { version = "0.340.0", features = ["unsafe_use_unprotected_platform"] }
rustyscript = { git = "https://github.com/rscarson/rustyscript", branch = "master", features = ["broadcast_channel", "cache", "console", "crypto", "ffi", "fs", "http", "kv", "url", "io", "web", "websocket", "webstorage", "fs_import", "url_import", "node_experimental"] }
deno_media_type = "=0.2.6"
winapi = {version = "0.3.9", features = ["sysinfoapi"] }
deno_error = "=0.5.5"
build-time = "0.1.3"

[features]
default = ["regex-backend-regex"] # Default to the standard regex crate

# Select exactly ONE of the following backends:
regex-backend-regex = ["dep:regex"]
regex-backend-hyperscan = ["dep:hyperscan"]

[lints]
# Inherit lints from workspace
workspace = true
