[package]
name = "smudgy_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Inherit versions from workspace where possible
anyhow = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
iced = { workspace = true }
serde = { workspace = true }
smudgy_map = { workspace = true }
iced_jsx = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
cfg-if = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
regex = { workspace = true, optional = true }
hyperscan = { workspace = true, optional = true }
log = { workspace = true }
rustyscript = { workspace = true }
vtparse = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
build-time = { workspace = true }
winapi = { workspace = true }
chrono = { workspace = true }
simplelog = "0.12.2"
thiserror = "2.0.10"
smudgy_theme = { workspace = true }

[features]
default = ["regex-backend-regex"] # Default to the standard regex crate

# Select exactly ONE of the following backends:
regex-backend-regex = ["dep:regex"]
regex-backend-hyperscan = ["dep:hyperscan"]

[lints]
# Inherit lints from workspace
workspace = true
