[package]
name = "iced_jsx"
version = "0.0.1"
edition = "2024"

[dependencies]
arc-swap = { workspace = true }
color-art = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
tokio = { workspace = true }
smudgy_theme = { workspace = true }
iced = { workspace = true }
thiserror = "2.0.12"

[lints]
workspace = true
