[package]
name = "smudgy_map"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
derive_more = { workspace = true, features = ["display", "from", "into", "add"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"
thiserror = "2.0.12"

# HTTP client for CloudMapper
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { workspace = true, features = ["rt"] }
arc-swap = { workspace = true }

[features]
default = ["cloud"]
cloud = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4"
pretty_env_logger = { workspace = true }

[lints]
workspace = true
