[package]
name = "smudgy_ui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
smudgy_core = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
log = { workspace = true }

validator.workspace = true
tokio.workspace = true

[build-dependencies]
winresource = "0.1.17"

[lints]
workspace = true 
