[package]
name = "smudgy_ui"
version = "0.2.4"
edition = "2024"
build = "build.rs"

[dependencies]
smudgy_core = { workspace = true }
smudgy_map = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
log = { workspace = true }

validator.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"

[build-dependencies]
winresource = "0.1.17"

[lints]
workspace = true 
