[package]
name = "smudgy_ui"
version = "0.2.4"
edition = "2024"
build = "build.rs"

[dependencies]
smudgy_core = { workspace = true }
smudgy_map = { workspace = true }
smudgy_theme = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
iced_anim = { workspace = true }
log = { workspace = true }
iced_jsx = { workspace = true }

validator.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"

[build-dependencies]
winresource = "0.1.17"

[lints]
workspace = true 
